Fixed squished modals on small screens

--- a/src/assets/scss/_custom-styles.scss
+++ b/src/assets/scss/_custom-styles.scss
@@ -354,3 +354,7 @@
   flex-basis: calc(100% / 8);
   width: calc(100% / 8);
 }
+@media (min-width: 576px) {
+ .modal-dialog {
+   max-width: 100%;
+ }}
